--- a/Web/views/pages/donate.ejs
+++ b/Web/views/pages/donate.ejs
@@ -60,7 +60,7 @@
 						<% } %>
 						<% if (officialMode) { %>
 							<h5 class="subtitle is-5">
-								By viewing ads, you are supporting us develop and maintain GAB publicly. However, we understand ads can be annoying and ruin the viewing experience. While we attempt to keep our ads as user-friendly as possible, you can disable ads here to prevent seeing them in this browser or enable them to continue supporting us.
+								By viewing ads, you are supporting us develop and maintain Skynet publicly. However, we understand ads can be annoying and ruin the viewing experience. While we attempt to keep our ads as user-friendly as possible, you can disable ads here to prevent seeing them in this browser or enable them to continue supporting us.
 							</h5>
 							<a class="button is-medium is-fullwidth is-outlined <%= adsense.isEnabled ? "is-danger" : "is-success"%>" onclick="SkynetUtil.toggleAds('<%= adsense.isEnabled %>');"><%= adsense.isEnabled ? "Disable" : "Enable" %> advertisements and sponsored content</a>
 						<% } %>
