--- a/Web/views/pages/maintainer-maintainers.ejs
+++ b/Web/views/pages/maintainer-maintainers.ejs
@@ -74,7 +74,7 @@
 									<li>
 										<strong>Server Hosts:</strong>
 										<br>
-										Any Operating System user who has write access to the folder where you installed GAB has the ability to modify your bot without restrictions; we say these users together act as "The Host".
+										Any Operating System user who has write access to the folder where you installed Skynet has the ability to modify your bot without restrictions; we say these users together act as "The Host".
 										You can configure Additional Permissions to be locked away from any Maintainer, after which the abilities linked to said Permission can only be exercised by The Host.
 									</li>
 								</ul>
@@ -206,7 +206,7 @@
 									</dt>
 									<dd>&bull; Can run the <code>eval</code> command</dd>
 									<dd>&bull; Can access the Evaluate section in the Maintainer Console</dd>
-									<dd class="is-danger-colored" title="Users with the Eval permission can evaluate code in GAB without restrictions, and thus have full control.">&bull; Can elevate their permissions</dd>
+									<dd class="is-danger-colored" title="Users with the Eval permission can evaluate code in Skynet without restrictions, and thus have full control.">&bull; Can elevate their permissions</dd>
 								</div>
 								<div class="field">
 									<dt>
