--- a/Web/views/pages/maintainer-server-list.ejs
+++ b/Web/views/pages/maintainer-server-list.ejs
@@ -37,7 +37,7 @@
 					<article class="message is-primary">
 						<div class="message-body">
 							<div class="content">
-								This section contains <strong>actions</strong> for every server the bot is on, namely sending a message to a channel, leaving the server, or preventing it from adding GAB again. For information about the servers, go to the <a href="/activity">activity page</a>.
+								This section contains <strong>actions</strong> for every server the bot is on, namely sending a message to a channel, leaving the server, or preventing it from adding Skynet again. For information about the servers, go to the <a href="/activity">activity page</a>.
 							</div>
 						</div>
 					</article>
