--- a/Web/views/pages/maintainer-version.ejs
+++ b/Web/views/pages/maintainer-version.ejs
@@ -18,7 +18,7 @@
 				</div>
 				<div class="column">
           			<h1 class="title">
-						GAB Version
+						Skynet Version
 					</h1>
 					<article class="message is-primary">
 						<div class="message-body">
@@ -72,7 +72,7 @@
 								<div class="generic-feature-box-description modal-button" data-target="#installed-version-modal">
 									<h4 class="subtitle is-4">
 										<% if (pageData.utd) { %>
-										<span class="icon" title="Your GAB is up-to-date.">
+										<span class="icon" title="Your Skynet is up-to-date.">
 											<i class="fa fa-check-circle"></i>
 										</span>
 										<% } %>
@@ -114,7 +114,7 @@
 								</div>
 								<div class="message-body">
 									<div class="content">
-										While GAB is updating, do not close this window! Doing so may lead to your instance becoming corrupted.
+										While Skynet is updating, do not close this window! Doing so may lead to your instance becoming corrupted.
 									</div>
 								</div>
 							</article>
