--- a/Web/views/partials/head-build.ejs
+++ b/Web/views/partials/head-build.ejs
@@ -1,3 +1,4 @@
 <link rel='stylesheet' href='/static/css/custom-07aed24a0d.min.css'>
+<link rel="stylesheet" href="/static/css/modern-ui.css?v=menu-fix">
 <script src='/static/js/app-skynet-v1.min.js'></script>
 
