--- a/Web/views/partials/maintainer-menu.ejs
+++ b/Web/views/partials/maintainer-menu.ejs
@@ -84,9 +84,9 @@
 			<a href="/dashboard/maintainer/management/injection">Script Injection</a>
 			<% } %>
             <% if (currentPage === "/dashboard/maintainer/management/version") { %>
-			<a class="is-active" href="#">GAB Version</a>
+			<a class="is-active" href="#">Skynet Version</a>
             <% } else { %>
-			<a href="/dashboard/maintainer/management/version">GAB Version</a>
+			<a href="/dashboard/maintainer/management/version">Skynet Version</a>
             <% } %>
             <% if (currentPage === "/dashboard/maintainer/management/eval") { %>
 			<a class="is-active" href="#">Evaluate</a>
