--- a/Web/views/partials/admin-sudo.ejs
+++ b/Web/views/partials/admin-sudo.ejs
@@ -13,7 +13,7 @@
                 <div class="box has-text-centered">
                     <p class="title is-4" style="color: #4a4a4a;">You are editing this Admin Console in Sudo Mode.</p>
                     <br>
-                    <p class="subtitle is-5" style="color: #4a4a4a;">As a Sudo Maintainer, you can access the Admin Console for guilds in which you are not a Bot Admin. To choose which Maintainers can enter Sudo Mode, visit the Maintainer Console.<br>Do not use Sudo Mode to manage guilds that have not requested support. Respect every guild's desire for privacy when using your GAB.</p>
+                    <p class="subtitle is-5" style="color: #4a4a4a;">As a Sudo Maintainer, you can access the Admin Console for guilds in which you are not a Bot Admin. To choose which Maintainers can enter Sudo Mode, visit the Maintainer Console.<br>Do not use Sudo Mode to manage guilds that have not requested support. Respect every guild's desire for privacy when using your Skynet instance.</p>
                 </div>
             </div>
         </div>
